syntax = "proto3";
package protos;

message Position2D {
	int32 x = 1;
	int32 y = 2;
}

message Rect2D {
	int32 x = 1;
	int32 y = 2;
	int32 width = 3;
	int32 height = 4;
}
